--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,7 @@ button, select, input {
     .controls {
         width: 90%;
         bottom: 25px;
+        flex-direction: row;
     }
     button, select, input {
         font-size: 12px;
@@ -91,10 +92,13 @@ button, select, input {
 @media (max-width: 520px) {
     .controls {
         width: 95%;
+        flex-direction: row;
+
     }
     button, select, input {
         font-size: 11px;
     }
+    
 }
 
 /* Responsive pour les écrans de 425px */
@@ -102,6 +106,7 @@ button, select, input {
     .controls {
         width: 100%;
         padding: 5px;
+        flex-direction: row;
     }
     button, select, input {
         font-size: 10px;
@@ -114,6 +119,7 @@ button, select, input {
         width: 100%;
         padding: 5px;
         bottom: 30px;
+        flex-direction: row;
     }
     button, select, input {
         font-size: 10px;
@@ -126,6 +132,7 @@ button, select, input {
         width: 100%;
         padding: 5px;
         bottom: 35px;
+        flex-direction: row;
     }
     button, select, input {
         font-size: 9px;
