--- a/styles.css
+++ b/styles.css
@@ -82,6 +82,7 @@ button, select, input {
         width: 90%;
         bottom: 25px;
         flex-direction: row;
+        flex-wrap:nowrap
     }
     button, select, input {
         font-size: 12px;
@@ -94,6 +95,7 @@ button, select, input {
     .controls {
         width: 95%;
         flex-direction: row;
+        flex-wrap: nowrap;
 
     }
     button, select, input {
@@ -109,6 +111,7 @@ button, select, input {
         width: 100%;
         padding: 5px;
         flex-direction: row;
+        flex-wrap: nowrap;
     }
     button, select, input {
         font-size: 10px;
@@ -123,6 +126,7 @@ button, select, input {
         padding: 5px;
         bottom: 30px;
         flex-direction: row;
+        flex-wrap: nowrap;
     }
     button, select, input {
         font-size: 10px;
@@ -136,7 +140,8 @@ button, select, input {
         width: 100%;
         padding: 5px;
         bottom: 35px;
-        flex-direction: row;
+        flex-direction:row;
+        flex-wrap:nowrap;
     }
     button, select, input {
         font-size: 9px;
