--- a/styles.css
+++ b/styles.css
@@ -24,10 +24,10 @@ canvas {
     transform: translateX(-50%);
     background-color: rgba(255, 255, 255, 0.9);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    padding: 15px;
+    padding: 5px;
     display: flex;
     align-items: center;
-    gap: 10px;
+    gap: 5px;
     flex-wrap: wrap;
     border-radius: 8px;
 }
@@ -36,30 +36,30 @@ canvas {
 button, select, input {
     font-family: 'Roboto', sans-serif;
     padding: 10px;
-    font-size: 14px;
+    font-size: 12px;
     border: none;
-    margin-right:3px;
-    border-radius: 3px;
+    margin-right:10px;
+    border-radius: 5px;
     cursor: pointer;
-    color:#e67e22;
+    color:#532b09;
     transition: background-color 0.3s, border-color 0.3s;
 }
 
 /* Primary button colors */
 button, input[type="submit"] {
-    background-color: #d9c424; /* Primary Purple */
+    background-color: #171402; /* Primary Purple */
     color: white;
     border: 2px solid transparent;
 }
 
 /* Button hover state */
 button:hover, input[type="submit"]:hover {
-    background-color: #732d91; /* Darker purple on hover */
+    background-color: #5f4a7d; /* Darker purple on hover */
 }
 
 /* Button active (clicked) state */
 button:active, input[type="submit"]:active {
-    background-color: #e67e22; /* Orange when active */
+    background-color: #4f2908; /* Orange when active */
     border-color: #d66e12;
 }
 
