--- a/styles.css
+++ b/styles.css
@@ -119,6 +119,10 @@ input:focus {
         flex-direction: row;
         bottom: 15px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 1024px) {
@@ -126,12 +130,20 @@ input:focus {
         width: 85%;
         flex-direction: column;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 992px) {
     .controls {
         width: 80%;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 820px) {
@@ -139,6 +151,10 @@ input:focus {
         width: 75%;
         bottom: 20px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 768px) {
@@ -155,6 +171,10 @@ input:focus {
     input {
         font-size: 13px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 620px) {
@@ -169,6 +189,10 @@ input:focus {
     input {
         font-size: 12px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 520px) {
@@ -184,6 +208,10 @@ input:focus {
     input {
         font-size: 11px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 425px) {
@@ -198,6 +226,10 @@ input:focus {
     input {
         font-size: 10px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 413px) {
@@ -213,6 +245,10 @@ input:focus {
     input {
         font-size: 10px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
 
 @media (max-width: 360px) {
@@ -227,4 +263,8 @@ input:focus {
     input {
         font-size: 9px;
     }
+    
+button{
+    margin-right: 3px;
+}
 }
