--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,7 @@ body {
     margin: 0;
     font-family: "Roboto", Arial, sans-serif;
     overflow: hidden;
-    background-color: #f4f6f9;
+    background-color: #a1b8db;
     /* Light gray background */
     color: #333;
     /* Default text color */
@@ -16,6 +16,7 @@ canvas {
     display: block;
     width: 100%;
     height: 100vh;
+    filter: drop-shadow(0 50px 20px #0009);
 }
 
 /* Styling for controls */
@@ -24,7 +25,7 @@ canvas {
     bottom: 10px;
     left: 50%;
     transform: translateX(-50%);
-    background-color: rgba(255, 255, 255, 0.9);
+    background-color: rgba(221, 221, 224, 0.9);
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     padding: 15px;
     display: flex;
@@ -32,6 +33,8 @@ canvas {
 
     flex-wrap: wrap;
     border-radius: 8px;
+    filter: drop-shadow(0 5px 10px rgba(218, 211, 211, 0.6));
+    
 }
 
 /* General button, select, input styling */
@@ -45,10 +48,13 @@ input {
     border-radius: 3px;
     cursor: pointer;
     transition: background-color 0.3s, border-color 0.3s;
+   
 }
 
 button{
     margin-right: 3px;
+    filter: drop-shadow(0 50px 20px #0009);
+    
 }
 
 
@@ -61,6 +67,7 @@ input[type="submit"] {
     /* Primary Purple */
     color: white;
     border: 2px solid transparent;
+    
 }
 
 /* Button hover state */
